src/test/deca/syntax/valid/custom/object/return_cast.deca
// Description:
//   Return with condition cast.
// Results:
//
//
// History:
//    created on 13/01/2022

{
   return (int) (1.1) == 1;
}
