src/test/deca/syntax/invalid/custom/return_int.deca
// Description:
//   Return int.
// Results:
//
//
// History:
//    created on 13/01/2022

{
   int i = 1;
   return;
}